feat: Change the page and size for querying