@@ -4,7 +4,6 @@ import co.elastic.clients.elasticsearch.ElasticsearchClient;
 import co.elastic.clients.elasticsearch._types.FieldValue;
 import co.elastic.clients.elasticsearch._types.Time;
 import co.elastic.clients.elasticsearch._types.query_dsl.Query;
-import co.elastic.clients.elasticsearch.core.OpenPointInTimeResponse;
 import co.elastic.clients.elasticsearch.core.SearchRequest;
 import co.elastic.clients.elasticsearch.core.SearchResponse;
 import co.elastic.clients.elasticsearch.core.search.Hit;
@@ -21,6 +20,7 @@ import org.apache.http.conn.ssl.NoopHostnameVerifier;
 import org.apache.http.impl.client.BasicCredentialsProvider;
 import org.elasticsearch.client.RestClient;
 import org.springframework.stereotype.Component;
+import org.springframework.util.StopWatch;
 
 import javax.net.ssl.SSLContext;
 import javax.net.ssl.TrustManager;
@@ -96,27 +96,13 @@ public class ElasticsearchService implements AutoCloseable {
 
     public SearchResponse<Map> query(String index, Query query, boolean trackTotalHits) throws IOException {
         if (trackTotalHits) {
-
-            if (query == null) {
+            if (query == null)
                 return client.search(s -> s.index(index).trackTotalHits(tth -> tth.enabled(true)), Map.class);
-            }
             return client.search(s -> s.index(index).query(query).trackTotalHits(tth -> tth.enabled(true)), Map.class);
         } else {
-            if (query == null) {
-                return client.search(s -> s.index(index), Map.class);
-            }
+            if (query == null) return client.search(s -> s.index(index), Map.class);
             return client.search(s -> s.index(index).query(query), Map.class);
         }
-    }
-
-    public String openPointInTime(String index) throws IOException {
-        OpenPointInTimeResponse openPointInTimeResponse =
-                client.openPointInTime(b -> b.index(index).keepAlive(KEEP_ALIVE));
-        return openPointInTimeResponse.id();
-    }
-
-    public void closePointInTime(String pitId) throws IOException {
-        client.closePointInTime(c -> c.id(pitId));
     }
 
     @Override
@@ -124,76 +110,67 @@ public class ElasticsearchService implements AutoCloseable {
         client.close();
     }
 
-    public List<String> executeClientsQuery(String clientPitId, int currentSlice, int numberOfSlices)
-            throws IOException {
-        log.info(
-                "Running client {} slice on total of {} slices with PIT: {}",
-                currentSlice,
-                numberOfSlices,
-                clientPitId);
-        Query query = QueryBuilder.buildClientQuery();
-        List<FieldValue> searchAfter = null;
-        List<String> resultIds = new ArrayList<>();
-
-        while (true) {
-            SearchRequest.Builder builder = new SearchRequest.Builder()
-                    .pit(pit -> pit.id(clientPitId).keepAlive(KEEP_ALIVE))
-                    .slice(s -> s.id(String.valueOf(currentSlice)).max(numberOfSlices))
-                    .size(QueryBuilder.BATCH_SIZE)
-                    .query(query)
-                    .source(source -> source.filter(
-                            filter -> filter.includes(QueryBuilder.CLIENT_ID, "attributes.a_created_date")))
-                    .sort(sort -> sort.field(field -> field.field("attributes.a_created_date")));
-            if (searchAfter != null) builder = builder.searchAfter(searchAfter);
-
-            SearchRequest searchRequest = builder.build();
-            SearchResponse<Map> response = queryWithPit(searchRequest);
-            List<Hit<Map>> hits = response.hits().hits();
-            if (hits.isEmpty()) break;
-
-            resultIds.addAll(hits.stream()
-                    .map(h -> ((String) Objects.requireNonNull(h.source()).get("client_id")))
-                    .toList());
-
-            searchAfter = hits.get(hits.size() - 1).sort();
-        }
-
-        return resultIds;
+    public List<String> executeClientsQuery(int from, int size) throws IOException {
+        StopWatch stopwatch = new StopWatch();
+        SearchRequest.Builder builder = new SearchRequest.Builder()
+                .index(QueryBuilder.CLIENT_INDEX)
+                .from(from)
+                .size(size)
+                .query(QueryBuilder.buildClientQuery())
+                .source(source ->
+                        source.filter(filter -> filter.includes(QueryBuilder.CLIENT_ID, "attributes.a_created_date")))
+                .sort(sort -> sort.field(field -> field.field("attributes.a_created_date")));
+        stopwatch.start("Client query from " + from + " with size " + size);
+        SearchResponse<Map> response = client.search(builder.build(), Map.class);
+        List<String> clientIds = response.hits().hits().stream()
+                .map(h -> ((String) Objects.requireNonNull(h.source()).get("client_id")))
+                .toList();
+        stopwatch.stop();
+        log.info("Client query from {} with size {} took {}ms", from, size, stopwatch.getTotalTimeMillis());
+        return clientIds;
     }
 
-    private SearchResponse<Map> queryWithPit(SearchRequest query) throws IOException {
-        return client.search(query, Map.class);
-    }
-
-    public List<String> executeEventsQuery(
-            String eventPitId, List<String> clientIds, int currentSlice, int numberOfSlices) throws IOException {
-        log.info("Running event {} slice on total of {} slices with PIT: {}", currentSlice, numberOfSlices, eventPitId);
-        Query query = QueryBuilder.buildEventQuery(clientIds);
+    public List<String> executeEventsQueryTerms(List<String> clientIds) throws IOException {
+        StopWatch stopwatch = new StopWatch();
         List<FieldValue> searchAfter = null;
         List<String> resultIds = new ArrayList<>();
-
+        stopwatch.start("Event query with terms");
         while (true) {
             SearchRequest.Builder builder = new SearchRequest.Builder()
-                    .pit(pit -> pit.id(eventPitId).keepAlive(KEEP_ALIVE))
-                    .slice(s -> s.id(String.valueOf(currentSlice)).max(numberOfSlices))
-                    .size(QueryBuilder.BATCH_SIZE)
-                    .query(query)
+                    .index(QueryBuilder.EVENT_INDEX)
+                    .query(QueryBuilder.buildEventQuery(clientIds))
                     .source(source -> source.filter(filter -> filter.includes(QueryBuilder.CLIENT_ID, "@timestamp")))
                     .sort(sort -> sort.field(field -> field.field("@timestamp")));
             if (searchAfter != null) builder = builder.searchAfter(searchAfter);
 
-            SearchRequest searchRequest = builder.build();
-            SearchResponse<Map> response = queryWithPit(searchRequest);
+            SearchResponse<Map> response = client.search(builder.build(), Map.class);
             List<Hit<Map>> hits = response.hits().hits();
             if (hits.isEmpty()) break;
-
             resultIds.addAll(hits.stream()
                     .map(h -> ((String) Objects.requireNonNull(h.source()).get("client_id")))
                     .toList());
 
-            searchAfter = hits.get(hits.size() - 1).sort();
+            searchAfter = hits.getLast().sort();
         }
+        stopwatch.stop();
+        log.info("Event query with terms took {}ms", stopwatch.getTotalTimeMillis());
+        return resultIds;
+    }
 
+    public List<String> executeEventsQuerySingle(List<String> clientIds) throws IOException {
+        StopWatch stopwatch = new StopWatch();
+        stopwatch.start("Event query with a single client at a time");
+        List<String> resultIds = new ArrayList<>();
+        for (String clientId : clientIds) {
+            SearchRequest.Builder builder = new SearchRequest.Builder()
+                    .index(QueryBuilder.EVENT_INDEX)
+                    .query(QueryBuilder.buildEventQuery(clientId));
+            SearchResponse<Map> response = client.search(builder.build(), Map.class);
+            if (response.hits().hits().isEmpty()) continue;
+            resultIds.add(clientId);
+        }
+        stopwatch.stop();
+        log.info("Event query with a single client at a time took {}ms", stopwatch.getTotalTimeMillis());
         return resultIds;
     }
 }
